--- a/Content/Resources/Branding/Branding.css
+++ b/Content/Resources/Branding/Branding.css
@@ -8,6 +8,6 @@
 	--LogoImage: url('../Images/PhotoWizardLogo.jpeg');
 	--Dark: #094074;
 	--Lightest: #ffcd85;
-	--Primary: #1c92ff;
+	--Primary: #094074;
 }
 
