--- a/Content/Resources/Stylesheets/Styles.css
+++ b/Content/Resources/Stylesheets/Styles.css
@@ -122,3 +122,25 @@ li
 	margin-top: 6pt;
 }
 
+p.codesample
+{
+	font-size: 12pt;
+	margin-top: 0;
+	margin-bottom: 0;
+	border-left-style: solid;
+	border-left-width: 0px;
+	border-right-style: solid;
+	border-right-width: 0px;
+	border-top-style: solid;
+	border-top-width: 0px;
+	border-bottom-style: solid;
+	border-bottom-width: 0px;
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	font-family: 'Courier New';
+	color: #a9a9a9;
+	background-color: #d3d3d3;
+}
+
