updated ignore file and drop-down link colour

--- a/Content/Resources/Stylesheets/Styles.css
+++ b/Content/Resources/Stylesheets/Styles.css
@@ -115,7 +115,7 @@ MadCap|dropDownHotspot
 	cursor: hand;
 	font-style: italic;
 	text-decoration: none;
-	color: #006600;
+	color: #01784e;
 }
 
 li
