--- a/Content/Resources/TableStyles/PWTableStyle.css
+++ b/Content/Resources/TableStyles/PWTableStyle.css
@@ -44,9 +44,13 @@ mcTableHeadStyle
 	separator-width: 2px;
 	separator-color: #000000;
 	background-color: #a60a20;
-	color: #ffffff;
+	color: #ff6347;
 	name: Header1;
 	id: 3;
+	cell-padding-left: 10px;
+	cell-padding-right: 10px;
+	cell-padding-top: 10px;
+	cell-padding-bottom: 10px;
 }
 
 mcTableBodyStyle
@@ -58,6 +62,10 @@ mcTableBodyStyle
 	background-color: #feaa2f;
 	name: Body1;
 	id: 1;
+	cell-padding-left: 3px;
+	cell-padding-right: 3px;
+	cell-padding-top: 3px;
+	cell-padding-bottom: 3px;
 }
 
 mcTableBodyStyle
@@ -69,6 +77,10 @@ mcTableBodyStyle
 	name: Body2;
 	id: 2;
 	background-color: #b0e0e6;
+	cell-padding-left: 3px;
+	cell-padding-right: 3px;
+	cell-padding-top: 3px;
+	cell-padding-bottom: 3px;
 }
 
 mcTableFootStyle
@@ -117,30 +129,30 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-HeadI-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadI-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadE-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	border-bottom-width: 2px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -148,17 +160,17 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-HeadE-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadF-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	border-bottom-width: 2px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -166,35 +178,35 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-HeadF-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadH-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadH-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadD-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	border-bottom-width: 2px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -202,70 +214,70 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-HeadD-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadC-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadC-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadB-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadB-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadA-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadA-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-HeadG-Column1-Header1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	color: #ffffff;
+	color: #ff6347;
 	background-color: #a60a20;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .TableStyle-PWTableStyle-HeadG-Column1-Header1 p
 {
-	color: #ffffff;
+	color: #ff6347;
 }
 
 .TableStyle-PWTableStyle-Foot-Footer1
@@ -424,11 +436,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyI-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyI-Column1-Body1 p
@@ -438,11 +450,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyE-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -458,11 +470,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyF-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -475,11 +487,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyH-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
@@ -492,11 +504,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyD-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -509,11 +521,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyC-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyC-Column1-Body1 p
@@ -523,11 +535,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyB-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
@@ -540,11 +552,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyA-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyA-Column1-Body1 p
@@ -554,11 +566,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyG-Column1-Body1
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #feaa2f;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyG-Column1-Body1 p
@@ -573,11 +585,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyI-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyI-Column1-Body2 p
@@ -587,11 +599,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyE-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -607,11 +619,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyF-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -624,11 +636,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyH-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
@@ -641,11 +653,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyD-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-bottom-width: 1px;
 	border-bottom-color: #000000;
 	border-bottom-style: solid;
@@ -658,11 +670,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyC-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyC-Column1-Body2 p
@@ -672,11 +684,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyB-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	border-right-width: 1px;
 	border-right-color: #000000;
 	border-right-style: solid;
@@ -689,11 +701,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyA-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyA-Column1-Body2 p
@@ -703,11 +715,11 @@ mcTableFootStyle
 
 .TableStyle-PWTableStyle-BodyG-Column1-Body2
 {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
 	background-color: #b0e0e6;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .TableStyle-PWTableStyle-BodyG-Column1-Body2 p
