--- a/Content/Resources/Stylesheets/Styles.css
+++ b/Content/Resources/Stylesheets/Styles.css
@@ -1,4 +1,4 @@
-/*<meta />*/
+﻿/*<meta />*/
 
 body
 {
@@ -215,3 +215,245 @@ MadCap|popupBody
 	background-color: #6dd2af;
 }
 
+p
+{
+	margin-bottom: 8px;
+	margin-top: 8px;
+}
+
+p.note
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #f0f7fb;
+	background-image: url(../Images/icons/Pencil-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #3498db;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.warning
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #f9e7e5;
+	background-image: url(../Images/icons/Warning-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #c0392b;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.example
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #e7f6f0;
+	background-image: url(../Images/icons/Check-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #27ae60;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.tip
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #fffbea;
+	background-image: url('../Images/icons/Bulb-48.png');
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #f1c40f;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.noteAlt
+{
+	background-color: #f0f7fb;
+	background-image: url(../Images/icons/Pencil-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #3498db;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.warningAlt
+{
+	background-color: #fcf7f2;
+	background-image: url(../Images/icons/Warning-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #e74c3c;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.exampleAlt
+{
+	background-color: #e7f6f0;
+	background-image: url(../Images/icons/Check-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #2ecc71;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+p.tipAlt
+{
+	background-color: #fffbea;
+	background-image: url('../Images/icons/Bulb-48.png');
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #f1c40f;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+/*Div styles*/
+
+div.note
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #f0f7fb;
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	background-image: url('../Images/icons/Pencil-48.png');
+	padding-left: 60px;
+	padding-right: 60px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+	border-left-style: solid;
+	border-left-width: 1px;
+	border-left-color: #3498db;
+	border-right-style: solid;
+	border-right-width: 1px;
+	border-right-color: #3498db;
+	border-top-style: solid;
+	border-top-width: 1px;
+	border-top-color: #3498db;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: #3498db;
+	width: 500px;
+}
+
+div.warning
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #f9e7e5;
+	background-image: url(../Images/icons/Warning-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #c0392b;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.example
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #e7f6f0;
+	background-image: url(../Images/icons/Check-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #27ae60;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.tip
+{
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	background-color: #fffbea;
+	background-image: url('../Images/icons/Bulb-48.png');
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border: solid 1px #f1c40f;
+	border-radius: 6px;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.noteAlt
+{
+	background-color: #f0f7fb;
+	background-image: url(../Images/icons/Pencil-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #3498db;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.warningAlt
+{
+	background-color: #fcf7f2;
+	background-image: url(../Images/icons/Warning-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #e74c3c;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.exampleAlt
+{
+	background-color: #e7f6f0;
+	background-image: url(../Images/icons/Check-48.png);
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #2ecc71;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
+
+div.tipAlt
+{
+	background-color: #fffbea;
+	background-image: url('../Images/icons/Bulb-48.png');
+	background-position: 9px 0px;
+	background-repeat: no-repeat;
+	border-left: solid 4px #f1c40f;
+	line-height: 18px;
+	overflow: hidden;
+	padding: 15px 60px;
+}
