update welcome page

--- a/Content/Resources/Stylesheets/Styles.css
+++ b/Content/Resources/Stylesheets/Styles.css
@@ -460,3 +460,28 @@ div.tipAlt
 	padding: 15px 60px;
 }
 
+img.welcome
+{
+	margin-top: 2px;
+	margin-bottom: 2px;
+	margin-left: 2px;
+	margin-right: 2px;
+	width: 150px;
+	padding-left: 2px;
+	padding-right: 2px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border-left-style: none;
+	border-left-width: 2px;
+	border-left-color: #2d3b67;
+	border-right-style: none;
+	border-right-width: 2px;
+	border-right-color: #2d3b67;
+	border-top-style: none;
+	border-top-width: 2px;
+	border-top-color: #2d3b67;
+	border-bottom-style: none;
+	border-bottom-width: 2px;
+	border-bottom-color: #2d3b67;
+}
+
